--- a/dd.aclabs.1.2015/src/main/resources/static/index.html
+++ b/dd.aclabs.1.2015/src/main/resources/static/index.html
@@ -2,8 +2,10 @@
 <html ng-app="feedbackApp">
   <head>
       <title>Feedback App</title>
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
       <script src="/js/feedback.js"></script>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
