--- a/dd.aclabs.1.2015/src/main/resources/static/index.html
+++ b/dd.aclabs.1.2015/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController">
       <div class="container">
         <div class="navbar-header">
-          <span class="navbar-brand">Feedback App</span>
+          <span class="navbar-brand">Feedback Application</span>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
